Changed to tick marks

--- a/0x04-flexbox/11-styles.css
+++ b/0x04-flexbox/11-styles.css
@@ -531,7 +531,7 @@
   }
 
   .hero-article::before {
-    content: "";
+    content: '';
     background:rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
@@ -552,4 +552,3 @@
     padding: 7rem 0 0;
     z-index: 2;
   }
-  
