Changed background color

--- a/0x05-form/04-styles.css
+++ b/0x05-form/04-styles.css
@@ -693,7 +693,7 @@ textarea {
   width: 100%;
   padding: 1.2rem;
   line-height: 1;
-  border: .1rem solid var(--color-black);
+  border: 0.1rem solid var(--color-black);
   background-color: var(--color-white);
   box-shadow: none;
   outline: 0;
@@ -707,8 +707,7 @@ input[type="email"] {
 input[type="text"]:focus,
 input[type="email"]:focus,
 textarea:focus {
-  border: .1rem solid var(--color-grey);
-  background-color: var(--color-light-grey);
+  border: 0.1rem solid var(--color-grey);
 }
 
 ::placeholder {
